fix: change token schema
