# src/swagger.json
@@ -70,10 +70,18 @@
         }
       }
     },
-    "/tasks": {
+    "/task": {
       "get": {
         "summary": "Listar tasks do usuário",
         "tags": ["Task"],
+        "headers": [
+          {
+            "name": "Token",
+            "in": "Authorization",
+            "type": "string",
+            "required": true
+          }
+        ],
         "requestBody": {},
         "responses": {
           "403": {
@@ -112,11 +120,74 @@
             "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjIwMjM2ZDAzMDI5OTVhZmU0OTBjOWRmZDY2OTNmMjIyMGZmMyIsImlhdCI6MTY5Nzg0NjkwOS44MTYsImV4cGlyZXNJbiI6MzYwMH0.IoMRsHtZVBu_3ouTyLCi0iz2ubgQCCgm2aKW7_59l-0"
           }
         }
-      }
+      },
+      "security": [{ "apiKeyAuth": [] }]
     },
-    "task/start": {
+    "/task/start": {
       "post": {
         "summary": "Iniciar uma task",
+        "tags": ["Task"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeStatusTask"
+              }
+            }
+          }
+        },
+        "responses": {
+          "403": {
+            "message": "Session token not provided"
+          },
+          "401": {
+            "message": "Authentication failed"
+          },
+          "400": {
+            "message": "Could not change tasks with status Done, Canceled or In Progress"
+          },
+          "200": {
+            "message": "string"
+          }
+        }
+      }
+    },
+    "/task/close": {
+      "post": {
+        "summary": "Finalizando uma task",
+        "tags": ["Task"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeStatusTask"
+              }
+            }
+          }
+        },
+        "responses": {
+          "403": {
+            "message": "Session token not provided"
+          },
+          "401": {
+            "message": "Authentication failed"
+          },
+          "400": {
+            "message": "Could not change tasks with status Done, Canceled or In Progress"
+          },
+          "200": {
+            "description": "OK",
+            "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjIwMjM2ZDAzMDI5OTVhZmU0OTBjOWRmZDY2OTNmMjIyMGZmMyIsImlhdCI6MTY5Nzg0NjkwOS44MTYsImV4cGlyZXNJbiI6MzYwMH0.IoMRsHtZVBu_3ouTyLCi0iz2ubgQCCgm2aKW7_59l-0"
+          }
+        }
+      },
+      "security": {
+        "apiKeyAuth": []
+      }
+    },
+    "/task/cancel": {
+      "post": {
+        "summary": "Cancelando uma task",
         "tags": ["Task"],
         "requestBody": {
           "content": {
@@ -146,6 +217,13 @@
     }
   },
   "components": {
+    "securitySchemes": [
+      {
+        "type": "apiKey",
+        "name": "Authorization: Token",
+        "in": "header"
+      }
+    ],
     "schemas": {
       "Signup": {
         "type": "object",
@@ -190,6 +268,14 @@
             "type": "string"
           },
           "description": {
+            "type": "string"
+          }
+        }
+      },
+      "ChangeStatusTask": {
+        "type": "object",
+        "properties": {
+          "taskId": {
             "type": "string"
           }
         }
